--- a/templates/admin1/event.html
+++ b/templates/admin1/event.html
@@ -68,6 +68,9 @@
                             <li>
                                 <a href="scoreboard.html">Scoreboard</a>
                             </li>
+                            <li>
+                                <a href="hall_of_fame.html">Hall Of Fame</a>
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -264,6 +267,12 @@
                     </div>
                 </nav>
             </div>
+
+
+               
+            
+
+
             <div class="app-content">
                 <div class="content-wrapper event">
                     <div class="container">
@@ -274,7 +283,34 @@
                                     <h1>Events and Happenings</h1>
                                 </div>
                             </div>
+                        
+
+                <div>
+                    <ul class="nav nav-pills mb-3" id="pills-tab">
+                        <div class="tabi">
+                          <div>
+                            <a href="event.html">
+                                <li class="nav-item" role="presentation">
+                                    <div class="nav-link active" id="pills-home-tab" >Create Event</div>
+                                </li>
+                            </a>
+                          </div>
+                           
+                            <div>
+                                <a href="event_request.html">
+                                    <li class="nav-item" role="presentation">
+                                        <div class="nav-link active" id="pills-home-tab" >Event Request</div>
+                                    </li>
+                                </a>
+                            </div>
                         </div>
+                        
+                    </ul>
+                </div>
+
+
+                        </div>
+                        <br>
                         <div>
                             <div class="row">
                                 <div class="card-body>
@@ -327,6 +363,7 @@
                                       <button class="btn btn-light">Cancel</button>
                                     </form>
                                   </div>
+                                  
                             </div>
                         </div>
                         
