--- a/templates/admin1/requests.html
+++ b/templates/admin1/requests.html
@@ -278,6 +278,133 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="profily">
+                            <div class="col-xl-4 cardy">
+                                <div class="card widget widget-connection-request">
+                                    <div class="card-header">
+                                        <h5 class="card-title">Membership Request<span class="badge badge-secondary badge-style-light">17 min ago</span></h5>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="widget-connection-request-container d-flex">
+                                            <div class="widget-connection-request-avatar">
+                                                <div class="avatar avatar-xl m-r-xs">
+                                                    <img src="../../assets/images/avatars/avatar.jpeg" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="widget-connection-request-info flex-grow-1">
+                                                <span class="widget-connection-request-info-name">
+                                                    Yididiya Gezahegn 
+                                                </span>
+                                                <span class="widget-connection-request-info-count">
+                                                    45 mutual connections
+                                                </span>
+                                                <span class="widget-connection-request-info-about">
+                                                    Senior Go Developer at Google
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <div class="widget-connection-request-actions d-flex">
+                                            <a href="#" class="btn btn-primary btn-style-light flex-grow-1 m-r-xxs"><i class="material-icons">done</i>Accept</a>
+                                            <a href="#" class="btn btn-danger btn-style-light flex-grow-1 m-l-xxs"><i class="material-icons">close</i>Ignore</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-4 cardy">
+                                <div class="card widget widget-connection-request">
+                                    <div class="card-header">
+                                        <h5 class="card-title">Membership Request<span class="badge badge-secondary badge-style-light">17 min ago</span></h5>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="widget-connection-request-container d-flex">
+                                            <div class="widget-connection-request-avatar">
+                                                <div class="avatar avatar-xl m-r-xs">
+                                                    <img src="../../assets/images/avatars/Avatar1.webp" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="widget-connection-request-info flex-grow-1">
+                                                <span class="widget-connection-request-info-name">
+                                                    Fekede Alemayehu 
+                                                </span>
+                                                <span class="widget-connection-request-info-count">
+                                                    45 mutual connections
+                                                </span>
+                                                <span class="widget-connection-request-info-about">
+                                                    Senior Go Developer at Google
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <div class="widget-connection-request-actions d-flex">
+                                            <a href="#" class="btn btn-primary btn-style-light flex-grow-1 m-r-xxs"><i class="material-icons">done</i>Accept</a>
+                                            <a href="#" class="btn btn-danger btn-style-light flex-grow-1 m-l-xxs"><i class="material-icons">close</i>Ignore</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-4 cardy">
+                                <div class="card widget widget-connection-request">
+                                    <div class="card-header">
+                                        <h5 class="card-title">Membership Request<span class="badge badge-secondary badge-style-light">17 min ago</span></h5>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="widget-connection-request-container d-flex">
+                                            <div class="widget-connection-request-avatar">
+                                                <div class="avatar avatar-xl m-r-xs">
+                                                    <img src="../../assets/images/avatars/Avatar1.webp" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="widget-connection-request-info flex-grow-1">
+                                                <span class="widget-connection-request-info-name">
+                                                    Fekede Alemayehu 
+                                                </span>
+                                                <span class="widget-connection-request-info-count">
+                                                    45 mutual connections
+                                                </span>
+                                                <span class="widget-connection-request-info-about">
+                                                    Senior Go Developer at Google
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <div class="widget-connection-request-actions d-flex">
+                                            <a href="#" class="btn btn-primary btn-style-light flex-grow-1 m-r-xxs"><i class="material-icons">done</i>Accept</a>
+                                            <a href="#" class="btn btn-danger btn-style-light flex-grow-1 m-l-xxs"><i class="material-icons">close</i>Ignore</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-4 cardy">
+                                <div class="card widget widget-connection-request">
+                                    <div class="card-header">
+                                        <h5 class="card-title">Membership Request<span class="badge badge-secondary badge-style-light">17 min ago</span></h5>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="widget-connection-request-container d-flex">
+                                            <div class="widget-connection-request-avatar">
+                                                <div class="avatar avatar-xl m-r-xs">
+                                                    <img src="../../assets/images/avatars/Avatar1.webp" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="widget-connection-request-info flex-grow-1">
+                                                <span class="widget-connection-request-info-name">
+                                                    Fekede Alemayehu 
+                                                </span>
+                                                <span class="widget-connection-request-info-count">
+                                                    45 mutual connections
+                                                </span>
+                                                <span class="widget-connection-request-info-about">
+                                                    Senior Go Developer at Google
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <div class="widget-connection-request-actions d-flex">
+                                            <a href="#" class="btn btn-primary btn-style-light flex-grow-1 m-r-xxs"><i class="material-icons">done</i>Accept</a>
+                                            <a href="#" class="btn btn-danger btn-style-light flex-grow-1 m-l-xxs"><i class="material-icons">close</i>Ignore</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
                         
                     </div>
                 </div>
