--- a/templates/admin1/scoreboard.html
+++ b/templates/admin1/scoreboard.html
@@ -316,6 +316,7 @@
                                           </span>
                                         </div>
                                       </div>
+
                                       
                                       <button type="submit" class="btn btn-gradient-primary me-2">Submit</button>
                                       <button class="btn btn-light">Cancel</button>
@@ -326,6 +327,33 @@
                         
                         
                     </div>
+                </div>
+            </div>
+            <div>nwsfeed</div>
+            <div class="filtery">
+                <div class="example-content">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                            First checkbox
+                        </li>
+                        <li class="list-group-item">
+                            <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                            Second checkbox
+                        </li>
+                        <li class="list-group-item">
+                            <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                            Third checkbox
+                        </li>
+                        <li class="list-group-item">
+                            <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                            Fourth checkbox
+                        </li>
+                        <li class="list-group-item">
+                            <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                            Fifth checkbox
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
