--- a/templates/admin1/todo.html
+++ b/templates/admin1/todo.html
@@ -271,11 +271,11 @@
                 </nav>
             </div>
             <div class="app-content">
-                <div class="content-wrapper">
+                <div class="content-wrapper scoreboard">
                     <div class="container">
                         <!-- ADD CODE HERE -->
                        
-                        <div class="row">
+                        <div class="row>
                             <div class="card">
                                 <div class="card-body">
                                   <h4 class="card-title text-white">Todo</h4>
@@ -341,5 +341,6 @@
     <script src="../../assets/js/main.min.js"></script>
     <script src="../../assets/js/custom.js"></script>
     <script src="../../assets/js/pages/dashboard.js"></script>
+    <script src="../../passets/js/todolist.js"></script>
 </body>
 </html>
