Finalize Admin Dashboard fronend part

--- a/templates/admin1/event_request.html
+++ b/templates/admin1/event_request.html
@@ -22,7 +22,7 @@
     <link href="../../assets/plugins/perfectscroll/perfect-scrollbar.css" rel="stylesheet">
     <link href="../../assets/plugins/pace/pace.css" rel="stylesheet">
     <link rel="stylesheet" href="../../passets/css/style.css">
-    
+    <link rel="stylesheet" href="../../assets/css/request.css">
     <!-- Theme Styles -->
     <link href="../../assets/css/main.min.css" rel="stylesheet">
     <link href="../../assets/css/custom.css" rel="stylesheet">
@@ -67,6 +67,9 @@
                             </li>
                             <li>
                                 <a href="scoreboard.html">Scoreboard</a>
+                            </li>
+                            <li>
+                                <a href="hall_of_fame.html">Hall Of Fame</a>
                             </li>
                         </ul>
                     </li>
@@ -308,53 +311,67 @@
 
                         </div>
                         <br>
-                        <div class="card">
+                        <div class="card requesty">
                             <div class="card-body">
-                              <h4 class="card-title">Basic Table</h4>
-                              <p class="card-description"> Add class <code>.table</code>
-                              </p>
-                              <table class="table">
-                                <thead>
-                                  <tr>
-                                    <th>Profile</th>
-                                    <th>VatNo.</th>
-                                    <th>Created</th>
-                                    <th>Status</th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                  <tr>
-                                    <td>Jacob</td>
-                                    <td>53275531</td>
-                                    <td>12 May 2017</td>
-                                    <td><label class="badge badge-danger">Pending</label></td>
-                                  </tr>
-                                  <tr>
-                                    <td>Messsy</td>
-                                    <td>53275532</td>
-                                    <td>15 May 2017</td>
-                                    <td><label class="badge badge-warning">In progress</label></td>
-                                  </tr>
-                                  <tr>
-                                    <td>John</td>
-                                    <td>53275533</td>
-                                    <td>14 May 2017</td>
-                                    <td><label class="badge badge-info">Fixed</label></td>
-                                  </tr>
-                                  <tr>
-                                    <td>Peter</td>
-                                    <td>53275534</td>
-                                    <td>16 May 2017</td>
-                                    <td><label class="badge badge-success">Completed</label></td>
-                                  </tr>
-                                  <tr>
-                                    <td>Dave</td>
-                                    <td>53275535</td>
-                                    <td>20 May 2017</td>
-                                    <td><label class="badge badge-warning">In progress</label></td>
-                                  </tr>
-                                </tbody>
-                              </table>
+                              <h4 class="card-title">Event Request</h4>
+                              <div class="table-responsive">
+                                <table class="table">
+                                  <thead>
+                                    <tr>
+                                      <th> User </th>
+                                      <th> Subject </th>
+                                      <th> Status </th>
+                                      <th> Request Date </th>
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                    <tr>
+                                      <td>
+                                        <img src="../../assets/images/faces/face1.jpg" class="me-2" alt="image"> David Grey
+                                      </td>
+                                      <td> Fund is not recieved </td>
+                                      <td>
+                                        <label class="badge badge-gradient-success">APPROVED</label>
+                                      </td>
+                                      <td> Dec 5, 2017 </td>
+                                     
+                                    </tr>
+                                    <tr>
+                                      <td>
+                                        <img src="../../assets/images/faces/face2.jpg" class="me-2" alt="image"> Stella Johnson
+                                      </td>
+                                      <td> High loading time </td>
+                                      <td>
+                                        <label class="badge badge-gradient-info">PENDING</label>
+                                      </td>
+                                      <td> Dec 12, 2017 </td>
+                                     
+                                    </tr>
+                                    <tr>
+                                      <td>
+                                        <img src="../../assets/images/faces/face3.jpg" class="me-2" alt="image"> Marina Michel
+                                      </td>
+                                      <td> Website down for one week </td>
+                                      <td>
+                                        <label class="badge badge-gradient-success">APPROVED</label>
+                                      </td>
+                                      <td> Dec 16, 2017 </td>
+                                    
+                                    </tr>
+                                    <tr>
+                                      <td>
+                                        <img src="../../assets/images/faces/face4.jpg" class="me-2" alt="image"> John Doe
+                                      </td>
+                                      <td> Loosing control on server </td>
+                                      <td>
+                                        <label class="badge badge-gradient-danger">REJECTED</label>
+                                      </td>
+                                      <td> Dec 3, 2017 </td>
+                                      
+                                    </tr>
+                                  </tbody>
+                                </table>
+                              </div>
                             </div>
                           </div>
                         
