--- a/templates/admin1/development.html
+++ b/templates/admin1/development.html
@@ -289,15 +289,13 @@
                             <div class="row">
                                 <div class="col">
                                     <div class="card">
-                                        <div class="card-header">
-                                            <h5 class="card-title">Basic</h5>
-                                        </div>
+                                        
                                         <div class="card-body">
                                             
                                                 
                                    
                                     <div class="section-description section-description-inline">
-                                        <h1>Individual Column Searching</h1>
+                                        <h2>Development Division Members Info</h2>
                                     </div>
                                     <div class="card">
                                         <div class="card-body">
