--- a/templates/admin1/hall_of_fame.html
+++ b/templates/admin1/hall_of_fame.html
@@ -274,7 +274,7 @@
                         <div class="row">
                             <div class="col">
                                 <div class="page-description">
-                                    <h1>Events and Happenings</h1>
+                                    <h1>Create Fame</h1>
                                 </div>
                             </div>
                         </div>
