--- a/publics/assets/css/custom.css
+++ b/publics/assets/css/custom.css
@@ -8,3 +8,16 @@
     width: 75%;
     background-color: white;
 }
+.filtery{
+    position: absolute;
+    top:265px;
+    right: 50px;
+    width:200px;
+}
+.hally{
+    width: 615px;
+}
+.cardy{
+    width: 300px;
+    height: 300px;
+}
