--- a/views/pages/AdminHallofFame.ejs
+++ b/views/pages/AdminHallofFame.ejs
@@ -68,6 +68,9 @@
                             <li>
                                 <a href="scoreboard.html">Scoreboard</a>
                             </li>
+                            <li>
+                                <a href="hall_of_fame.html">Hall Of Fame</a>
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -190,7 +193,73 @@
                                     <a class="nav-link nav-notifications-toggle" id="notificationsDropDown" href="#" data-bs-toggle="dropdown">4</a>
                                     <div class="dropdown-menu dropdown-menu-end notifications-dropdown" aria-labelledby="notificationsDropDown">
                                         <h6 class="dropdown-header">Notifications</h6>
-                                
+                                        <div class="notifications-dropdown-list">
+                                            <a href="#">
+                                                <div class="notifications-dropdown-item">
+                                                    <div class="notifications-dropdown-item-image">
+                                                        <span class="notifications-badge bg-info text-white">
+                                                            <i class="material-icons-outlined">campaign</i>
+                                                        </span>
+                                                    </div>
+                                                    <div class="notifications-dropdown-item-text">
+                                                        <p class="bold-notifications-text">Donec tempus nisi sed erat vestibulum, eu suscipit ex laoreet</p>
+                                                        <small>19:00</small>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <a href="#">
+                                                <div class="notifications-dropdown-item">
+                                                    <div class="notifications-dropdown-item-image">
+                                                        <span class="notifications-badge bg-danger text-white">
+                                                            <i class="material-icons-outlined">bolt</i>
+                                                        </span>
+                                                    </div>
+                                                    <div class="notifications-dropdown-item-text">
+                                                        <p class="bold-notifications-text">Quisque ligula dui, tincidunt nec pharetra eu, fringilla quis mauris</p>
+                                                        <small>18:00</small>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <a href="#">
+                                                <div class="notifications-dropdown-item">
+                                                    <div class="notifications-dropdown-item-image">
+                                                        <span class="notifications-badge bg-success text-white">
+                                                            <i class="material-icons-outlined">alternate_email</i>
+                                                        </span>
+                                                    </div>
+                                                    <div class="notifications-dropdown-item-text">
+                                                        <p>Nulla id libero mattis justo euismod congue in et metus</p>
+                                                        <small>yesterday</small>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <a href="#">
+                                                <div class="notifications-dropdown-item">
+                                                    <div class="notifications-dropdown-item-image">
+                                                        <span class="notifications-badge">
+                                                            <img src="../../assets/images/avatars/avatar.png" alt="">
+                                                        </span>
+                                                    </div>
+                                                    <div class="notifications-dropdown-item-text">
+                                                        <p>Praesent sodales lobortis velit ac pellentesque</p>
+                                                        <small>yesterday</small>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <a href="#">
+                                                <div class="notifications-dropdown-item">
+                                                    <div class="notifications-dropdown-item-image">
+                                                        <span class="notifications-badge">
+                                                            <img src="../../assets/images/avatars/avatar.png" alt="">
+                                                        </span>
+                                                    </div>
+                                                    <div class="notifications-dropdown-item-text">
+                                                        <p>Praesent lacinia ante eget tristique mattis. Nam sollicitudin velit sit amet auctor porta</p>
+                                                        <small>yesterday</small>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                        </div>
                                     </div>
                                 </li>
                             </ul>
@@ -202,69 +271,81 @@
                 <div class="content-wrapper event">
                     <div class="container">
                         <!-- ADD CODE HERE -->
-                  
                         <div class="row">
                             <div class="col">
                                 <div class="page-description">
-                                    <h1>Events and Happenings</h1>
+                                    <h1>Create Fame</h1>
                                 </div>
-                                      
                             </div>
                         </div>
                         <div>
                             <div class="row">
                                 <div class="card-body">
-                            <form  action="/event/upload" method="POST" enctype="multipart/form-data">
-                                     <div class="form-group">
-                                        <label for="title">Title</label>
-                                        <input type="text" class="form-control" id="title" placeholder="Name" name="title">
+                                    <form class="forms-sample" action="/fames/post" method="POST" enctype="multipart/form-data">
+                                      <div class="form-group">
+                                        <label for="firstname">First Name</label>
+                                        <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Name">
+                                      </div>
+                                      <div class="form-group">
+                                        <label for="lastname">Last Name</label>
+                                        <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Name">
                                       </div>
                                       <div>
-                                        <label for="category">category</label> <br>
+                                        <label for="gender">Gender</label> <br>
                                         <div>
                                             <br>
-                                            <select name="category" id="category">
-                                                <option value="event">Scheduled Events</option>
-                                                <option value="news">NewsFeed</option>
+                                            <select name="gender" id="gender">
+                                                <option value="male"> Male</option>
+                                                <option value="female">Female</option>
                                               </select>
                                         </div>
                                       </div>
                                       <br>
-
                                       <div class="form-group">
-                                        <label for="event_content">Description</label>
-                                        <textarea class="form-control" id="event_content" name="event_content" rows="4"></textarea>
-                                      </div>
-
-                                      <div class="form-group">
-                                        <label>Attach Photo</label>
-                                        <div class="input-group col-xs-12">
-                                            <input type="file" value="" id="picture" name="picture">
-                                        </div>
+                                        <label for="famedescription">Description</label>
+                                        <textarea class="form-control" id="famedescription" name="famedescription" rows="4"></textarea>
                                       </div>
                                       <div>
-                                           <label > Is This Event Post is Scoreboard</label>
-                                            <br>
-                                            <select name="scoreboard" id="tag">
-                                                <option value="0" >No </option>
-                                                <option value="1" >Yes</option>
-                                              </select>
-                                        </div>
-                                      <div>
-                                        <label for="tag">Tag</label> <br>
+                                        <label for="division">Divison</label> <br>
                                         <div>
                                             <br>
-                                            <select name="tag" id="tag">
+                                            <select name="division" id="division">
                                                 <option value="CBD">CBD </option>
                                                 <option value="CPD">CPD</option>
                                                 <option value="DEV">DEV</option>
                                               </select>
                                         </div>
+                                        
+
+                                      <label for="year">Year</label> <br>
+                                        <div>
+                                            <br>
+                                            <select name="year" id="year">
+                                                <option value="2017">2017 </option>
+                                                <option value="2018">2018</option>
+                                                <option value="2019">2019</option>
+                                                <option value="2020">2020 </option>
+                                                <option value="2021">2021</option>
+                                                <option value="2022">2022</option>
+                                              </select>
+                                        </div>
+                                   <div class="form-group">
+                                        <label>Attach Photo</label>
+                                        <div class="input-group col-xs-12">
+                                            <input type="file" value="" id="famephoto" name="famephoto">
+                                   </div>
+                                      </div>
                                         <br>
                                       </div>
-                                      <button>Submit</button>
-     
-                           </form>
+
+                                      
+
+                                      
+                                     
+            
+                                      <button>Post</button>
+                                      <button class="btn btn-light">Cancel</button>
+                                    </form>
                                   </div>
                             </div>
                         </div>
@@ -276,9 +357,13 @@
     </div>
     
     <!-- Javascripts -->
+    <script src="../../assets/plugins/jquery/jquery-3.5.1.min.js"></script>
     <script src="../../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../assets/plugins/perfectscroll/perfect-scrollbar.min.js"></script>
     <script src="../../assets/plugins/pace/pace.min.js"></script>
+    <script src="../../assets/plugins/apexcharts/apexcharts.min.js"></script>
+    <script src="../../assets/js/main.min.js"></script>
     <script src="../../assets/js/custom.js"></script>
+    <script src="../../assets/js/pages/dashboard.js"></script>
 </body>
 </html>
