Upload starter of landing page

--- a/templates/FlexStart/assets/css/style.css
+++ b/templates/FlexStart/assets/css/style.css
@@ -2034,3 +2034,11 @@ section {
   font-size: 13px;
   color: #012970;
 }
+
+.executivy{
+  display: flex;
+  width:1114px;
+  justify-content: space-between;
+  align-items: center;
+
+}
