lastly modified pages

--- a/neptune/source/templates/admin1/request-to-post-cpd.html
+++ b/neptune/source/templates/admin1/request-to-post-cpd.html
@@ -515,7 +515,7 @@
                             <div class="col">
                                 <div class="page-description">
                                     <h1>Post Section</h1>
-                                    <span>write here to post any event or cretive ideas.<br>The admin will approve it soon.Do you prefer to send written document ? <a href="">click here</a></span>
+                                    <span>write here to copy and paste any event or cretive ideas.<br>The admin will approve it soon.Ready to post <a href="send-post.html">click here</a></span>
                                 </div>
                             </div>
                         </div> 
