--- a/neptune/source/templates/admin1/request-to-post.html
+++ b/neptune/source/templates/admin1/request-to-post.html
@@ -56,9 +56,7 @@
                 <li class="sidebar-title">
                     Apps
                 </li>
-                <li class="active-page">
-                    <a href="dev-member.html" class="active"><i class="material-icons-two-tone">dashboard</i>Dashboard</a>
-                </li>
+              
               
                 <li>
                     <a href="newsFeed.html"><i class="material-icons-outlined">newspaper</i>News<span class="badge rounded-pill badge-danger float-end">87</span></a>
@@ -513,7 +511,7 @@
                             <div class="col">
                                 <div class="page-description">
                                     <h1>Post Section</h1>
-                                    <span>write here to post any event or cretive ideas.<br>The admin will approve it soon.Do you prefer to send written document ? <a href="">click here</a></span>
+                                    <span>write here to copy and paste any event or cretive ideas.<br>The admin will approve it soon.Ready to post <a href="send-post.html">click here</a></span>
                                 </div>
                             </div>
                         </div> 
