--- a/neptune/source/templates/admin1/send-post.html
+++ b/neptune/source/templates/admin1/send-post.html
@@ -311,7 +311,7 @@
                                                
                                                               </form>
                                                                <br>
-                                                              <a href="" class="btn btn-primary">Update Profile</a> 
+                                                              <a href="" class="btn btn-primary">Post</a> 
                                                               
                                                         </div> 
                                                      
