added Admin views

--- a/views/pages/UserhallofFame.ejs
+++ b/views/pages/UserhallofFame.ejs
@@ -269,7 +269,7 @@
                                 <div class="card">
                                     <img src="../uploads/images/<%= fame.famephoto%>" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title"> <%= fame.firstname %> <%=fame.firstname %>  <%=fame.lastname %> </h5>
+                                        <h5 class="card-title"> <%= fame.firstname %>  <%=fame.lastname %> </h5>
                                         <p class="card-text"><%=fame.famedescription %></p>
                                         <h6> Year: <%=fame.year %></h6>
                                       </div>
