--- a/views/pages/registration_form.ejs
+++ b/views/pages/registration_form.ejs
@@ -21,9 +21,7 @@
     <link href="../../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../../assets/plugins/perfectscroll/perfect-scrollbar.css" rel="stylesheet">
     <link href="../../assets/plugins/pace/pace.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../passets/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="../../passets/vendors/css/vendor.bundle.base.css">
-    <link rel="stylesheet" href="../../passets/css/style.css">
+
     
     <!-- Theme Styles -->
     <link href="../../assets/css/main.min.css" rel="stylesheet">
@@ -40,20 +38,18 @@
     <![endif]-->
 </head>
 <body>
-<%- include("./partials/AdminNav.ejs") %>
+  <%- include("./partials/AdminNav.ejs") %>   
             <div class="app-content">
-                <div class="content-wrapper scoreboard">
+                <div class="content-wrapper">
                     <div class="container">
                         <!-- ADD CODE HERE -->
                         <div class="row">
                             <div class="col">
                                 <div class="page-description">
-                                    <h1>Scoreboard</h1>
+                                    <h1>Registration Form </h1>
                                 </div>
                             </div>
                         </div>
-           
-                        
                         
                     </div>
                 </div>
@@ -62,9 +58,12 @@
     </div>
     
     <!-- Javascripts -->
+    <script src="../../assets/plugins/jquery/jquery-3.5.1.min.js"></script>
     <script src="../../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../assets/plugins/perfectscroll/perfect-scrollbar.min.js"></script>
     <script src="../../assets/plugins/pace/pace.min.js"></script>
+    <script src="../../assets/plugins/apexcharts/apexcharts.min.js"></script>
+    <script src="../../assets/js/main.min.js"></script>
     <script src="../../assets/js/custom.js"></script>
     <script src="../../assets/js/pages/dashboard.js"></script>
 </body>
