--- a/views/pages/calendar.ejs
+++ b/views/pages/calendar.ejs
@@ -21,9 +21,17 @@
     <link href="../../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../../assets/plugins/perfectscroll/perfect-scrollbar.css" rel="stylesheet">
     <link href="../../assets/plugins/pace/pace.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../passets/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="../../passets/vendors/css/vendor.bundle.base.css">
-    <link rel="stylesheet" href="../../passets/css/style.css">
+    <!-- Styles -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+    <link href="../../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../assets/plugins/perfectscroll/perfect-scrollbar.css" rel="stylesheet">
+    <link href="../../assets/plugins/pace/pace.css" rel="stylesheet">
+    <link href="../../assets/plugins/highlight/styles/github-gist.css" rel="stylesheet">
+    <link href="../../assets/plugins/fullcalendar/lib/main.min.css" rel="stylesheet">
+
     
     <!-- Theme Styles -->
     <link href="../../assets/css/main.min.css" rel="stylesheet">
@@ -42,19 +50,17 @@
 <body>
 <%- include("./partials/AdminNav.ejs") %>
             <div class="app-content">
-                <div class="content-wrapper scoreboard">
-                    <div class="container">
-                        <!-- ADD CODE HERE -->
+                <div class="content-wrapper">
+                    <div class="container-fluid">
                         <div class="row">
                             <div class="col">
-                                <div class="page-description">
-                                    <h1>Scoreboard</h1>
+                                <div class="card calendar-container">
+                                    <div class="card-body">
+                                        <div id="calendar"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-           
-                        
-                        
                     </div>
                 </div>
             </div>
@@ -62,10 +68,15 @@
     </div>
     
     <!-- Javascripts -->
+    <script src="../../assets/plugins/jquery/jquery-3.5.1.min.js"></script>
+    <script src="../../assets/plugins/bootstrap/js/popper.min.js"></script>
     <script src="../../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../assets/plugins/perfectscroll/perfect-scrollbar.min.js"></script>
     <script src="../../assets/plugins/pace/pace.min.js"></script>
+    <script src="../../assets/plugins/highlight/highlight.pack.js"></script>
+    <script src="../../assets/plugins/fullcalendar/lib/main.min.js"></script>
+    <script src="../../assets/js/main.min.js"></script>
     <script src="../../assets/js/custom.js"></script>
-    <script src="../../assets/js/pages/dashboard.js"></script>
+    <script src="../../assets/js/pages/calendar.js"></script>
 </body>
 </html>
