--- a/views/pages/event.ejs
+++ b/views/pages/event.ejs
@@ -38,166 +38,7 @@
     <![endif]-->
 </head>
 <body>
-    <div class="app align-content-stretch d-flex flex-wrap">
-        <div class="app-sidebar">
-            <div class="logo">
-                <a href="index.html" class="logo-icon"><span class="logo-text">Neptune</span></a>
-                <div class="sidebar-user-switcher user-activity-online">
-                    <a href="#">
-                        <img src="../../assets/images/avatars/avatar.png">
-                        <span class="activity-indicator"></span>
-                        <span class="user-info-text">Admin<br><span class="user-state-info">On a call</span></span>
-                    </a>
-                </div>
-            </div>
-            <div class="app-menu">
-                <ul class="accordion-menu">
-                    <li class="sidebar-title">
-                        Apps
-                    </li>
-                    
-                    <li class="active-page">
-                        <a href="index.html" class="active"><i class="material-icons-two-tone">dashboard</i>Dashboard</a>
-                    </li>
-                    <li>
-                        <a href=""><i class="material-icons-two-tone">star</i>Post<i class="material-icons has-sub-menu">keyboard_arrow_right</i></a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="event.html">Event</a>
-                            </li>
-                            <li>
-                                <a href="scoreboard.html">Scoreboard</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href=""><i class="material-icons-two-tone">corporate_fare</i>Divisions<i class="material-icons has-sub-menu">keyboard_arrow_right</i></a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="capacity_building.html">CBD</a>
-                            </li>
-                            <li>
-                                <a href="competitve_programming.html">CPD</a>
-                            </li>
-                            <li>
-                                <a href="development.html">DEV</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="requests.html"><i class="material-icons-two-tone">navigation</i>Requests</a>
-                    </li>
-                    <li>
-                        <a href="calendar.html"><i class="material-icons-two-tone">calendar_today</i>Calendar<span class="badge rounded-pill badge-success float-end">14</span></a>
-                    </li>
-                    <li>
-                        <a href="todo.html"><i class="material-icons-two-tone">done</i>Todo</a>
-                    </li>
-                    <li>
-                        <a href="registration_form.html"><i class="material-icons-two-tone">app_registration</i>Registrations</a>
-                    </li>
-                    <li>
-                        <a href="votes.html"><i class="material-icons-two-tone">leaderboard</i>Polls and vote</a>
-                    </li>
-                    
-                </ul>
-            </div>
-        </div>
-        <div class="app-container">
-            <div class="search">
-                <form>
-                    <input class="form-control" type="text" placeholder="Type here..." aria-label="Search">
-                </form>
-                <a href="#" class="toggle-search"><i class="material-icons">close</i></a>
-            </div>
-            <div class="app-header">
-                <nav class="navbar navbar-light navbar-expand-lg">
-                    <div class="container-fluid">
-                        <div class="navbar-nav" id="navbarNav">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link hide-sidebar-toggle-button" href="#"><i class="material-icons">first_page</i></a>
-                                </li>
-                                <li class="nav-item dropdown hidden-on-mobile">
-                                    <a class="nav-link dropdown-toggle" href="#" id="addDropdownLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <i class="material-icons">add</i>
-                                    </a>
-                                    <ul class="dropdown-menu" aria-labelledby="addDropdownLink">
-                                        <li><a class="dropdown-item" href="#">New Workspace</a></li>
-                                        <li><a class="dropdown-item" href="#">New Board</a></li>
-                                        <li><a class="dropdown-item" href="#">Create Project</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item dropdown hidden-on-mobile">
-                                    <a class="nav-link dropdown-toggle" href="#" id="exploreDropdownLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <i class="material-icons-outlined">explore</i>
-                                    </a>
-                                    <ul class="dropdown-menu dropdown-lg large-items-menu" aria-labelledby="exploreDropdownLink">
-                                        <li>
-                                            <h6 class="dropdown-header">Repositories</h6>
-                                        </li>
-                                        <li>
-                                            <a class="dropdown-item" href="#">
-                                                <h5 class="dropdown-item-title">
-                                                    Neptune iOS
-                                                    <span class="badge badge-warning">1.0.2</span>
-                                                    <span class="hidden-helper-text">switch<i class="material-icons">keyboard_arrow_right</i></span>
-                                                </h5>
-                                                <span class="dropdown-item-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a class="dropdown-item" href="#">
-                                                <h5 class="dropdown-item-title">
-                                                    Neptune Android
-                                                    <span class="badge badge-info">dev</span>
-                                                    <span class="hidden-helper-text">switch<i class="material-icons">keyboard_arrow_right</i></span>
-                                                </h5>
-                                                <span class="dropdown-item-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
-                                            </a>
-                                        </li>
-                                        <li class="dropdown-btn-item d-grid">
-                                            <button class="btn btn-primary">Create new repository</button>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-            
-                        </div>
-                        <div class="d-flex">
-                            <ul class="navbar-nav">
-                                <li class="nav-item hidden-on-mobile">
-                                    <a class="nav-link active" href="#">Applications</a>
-                                </li>
-                                <li class="nav-item hidden-on-mobile">
-                                    <a class="nav-link" href="#">Reports</a>
-                                </li>
-                                <li class="nav-item hidden-on-mobile">
-                                    <a class="nav-link" href="#">Projects</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link toggle-search" href="#"><i class="material-icons">search</i></a>
-                                </li>
-                                <li class="nav-item hidden-on-mobile">
-                                    <a class="nav-link language-dropdown-toggle" href="#" id="languageDropDown" data-bs-toggle="dropdown"><img src="../../assets/images/flags/us.png" alt=""></a>
-                                        <ul class="dropdown-menu dropdown-menu-end language-dropdown" aria-labelledby="languageDropDown">
-                                            <li><a class="dropdown-item" href="#"><img src="../../assets/images/flags/germany.png" alt="">German</a></li>
-                                            <li><a class="dropdown-item" href="#"><img src="../../assets/images/flags/italy.png" alt="">Italian</a></li>
-                                            <li><a class="dropdown-item" href="#"><img src="../../assets/images/flags/china.png" alt="">Chinese</a></li>
-                                        </ul>
-                                </li>
-                                <li class="nav-item hidden-on-mobile">
-                                    <a class="nav-link nav-notifications-toggle" id="notificationsDropDown" href="#" data-bs-toggle="dropdown">4</a>
-                                    <div class="dropdown-menu dropdown-menu-end notifications-dropdown" aria-labelledby="notificationsDropDown">
-                                        <h6 class="dropdown-header">Notifications</h6>
-                                
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-            </div>
+<%- include("./partials/AdminNav.ejs") %>
             <div class="app-content">
                 <div class="content-wrapper event">
                     <div class="container">
@@ -214,7 +55,7 @@
                         <div>
                             <div class="row">
                                 <div class="card-body">
-                            <form  action="/event/upload" method="POST" enctype="multipart/form-data">
+                            <form  action="/admin/event/upload" method="POST" enctype="multipart/form-data">
                                      <div class="form-group">
                                         <label for="title">Title</label>
                                         <input type="text" class="form-control" id="title" placeholder="Name" name="title">
