--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -40,20 +40,17 @@
     <![endif]-->
 </head>
 <body>
-<%- include("./partials/AdminNav.ejs") %>
-            <div class="app-content">
-                <div class="content-wrapper scoreboard">
+ <%- include("./partials/AdminNav.ejs") %>            <div class="app-content">
+                <div class="content-wrapper">
                     <div class="container">
                         <!-- ADD CODE HERE -->
                         <div class="row">
                             <div class="col">
                                 <div class="page-description">
-                                    <h1>Scoreboard</h1>
+                                    <h1>Dashboard</h1>
                                 </div>
                             </div>
                         </div>
-           
-                        
                         
                     </div>
                 </div>
@@ -62,9 +59,12 @@
     </div>
     
     <!-- Javascripts -->
+    <script src="../../assets/plugins/jquery/jquery-3.5.1.min.js"></script>
     <script src="../../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../assets/plugins/perfectscroll/perfect-scrollbar.min.js"></script>
     <script src="../../assets/plugins/pace/pace.min.js"></script>
+    <script src="../../assets/plugins/apexcharts/apexcharts.min.js"></script>
+    <script src="../../assets/js/main.min.js"></script>
     <script src="../../assets/js/custom.js"></script>
     <script src="../../assets/js/pages/dashboard.js"></script>
 </body>
